--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,16 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.square-component{
+  float: left;
+  border: black 1px solid;
+  padding: 4px;
+  background-color: white;
+  width: 10vmax;
+  height: 10vmax;
+}
+
+.board-row{
+  clear: left;
+}
